app-test/testdata/typesystem/neg/tuple-type-element-access/check/tuple1.check
Error in "testdata/typesystem/neg/tuple-type-element-access/src/tuple.cal" on line 5:
            OUT <-- a.#0;
                    ^^^^
No member #0 for (int, bool).